@@ -1,3 +1,11 @@
+2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* xfixes.pc.in:
+	Update pkgconfig files to separate library build-time dependencies
+	from application build-time dependencies.
+	* configure.ac:
+	Update dependencies to work with separate build roots.
+
 2005-11-12  Alan Coopersmith  <alan.coopersmith@sun.com>
 
 	* man/Makefile.am: 
